3.1.5 (2016-MM-DD)
------------------

New features
 - [eas] added folder merging capabilities

Enhancements
 - [web] improve action progress when login in or sending a message (#3765, #3761)
 - [web] don't allow to send the message while an upload is in progress
 - [web] notify when successfuly copied or moved some messages
 - [web] restored indicator in the top banner when a vacation message (auto-reply) is active
 - [web] removed animation when dragging an event to speed up rendering
 - [web] expunge drafts mailbox when a draft is sent and deleted
 - [web] actions of Sieve filters are now sortable
 - [web] show progress indicator when refreshing events/tasks lists

Bug fixes
 - [web] fixed refresh of addressbook when deleting one or many cards
 - [web] reset multiple-selection mode after deleting cards, events or tasks
 - [web] fixed exception when moving tasks to a different calendar
 - [web] fixed printing of long mail (#3731)
 - [web] fixed position of ghost block when creating an event from DnD
 - [web] fixed avatar image in autocompletion
 - [web] restored expunge of current mailbox when leaving the Mail module
 - [web] added support for multiple description values in LDAP entries (#3750)
 - [web] don't allow drag'n'drop of invitations
 - [eas] fixed long GUID issue preventing sometimes synchronisation (#3460)
 - [core] fixing sogo-tool backup with multi-domain configuration but domain-less logins
 - [core] during event scheduling, use 409 instead of 403 so Lightning doesn't fail silently

3.1.4 (2016-07-12)
------------------

New features
 - [core] new sogo-tool truncate-calendar feature (#1513, #3141)
 - [eas] initial Out-of-Office support in EAS
 - [oc] initial support for calendar and address book sharing with OpenChange

Enhancements
 - [eas] use the preferred email identity in EAS if valid (#3698)
 - [eas] handle inline attachments during EAS content generation