@@ -2,6 +2,7 @@
 ------------------
 
 New features
+ - [web] drag'n'drop of messages in the Mail module (#3497, #3586, #3734, #3788)
  - [eas] added folder merging capabilities
 
 Enhancements
